Drools 6457 - Drools uses obsolete/to be deleted Java APIs (#3727)
* Updating to JDK 11

https://issues.redhat.com/browse/DROOLS-6457

Automatic updates
https://jenkins.updater.j2eeguys.com/

Signed-off-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>

* Updating to JDK 11

https://issues.redhat.com/browse/DROOLS-6457

Automatic updates
https://jenkins.updater.j2eeguys.com/

Signed-off-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>

Co-authored-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>